--- a/css/style.css
+++ b/css/style.css
@@ -1022,7 +1022,7 @@ ul.grid li .comein i {
 ul.grid li .comein-bg {
 	-khtml-opacity: .70;
 	-moz-opacity: .70;
-	-ms-filter: â€alpha(opacity=70)â€;
+	-ms-filter: ”alpha(opacity=70)”;
 	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.7);
 	filter: alpha(opacity=70);
 	opacity: .70;
