--- a/css/styles/default.css
+++ b/css/styles/default.css
@@ -1,59 +1,59 @@
 ul#navigation li.external:hover .icon, ul#navigation li.currentmenu .icon{
-	color: #9a9ef6;
+	color: #03cc85;
 }
 .ul-boxed li {
-	border-left-color:#9a9ef6;
+	border-left-color:#03cc85;
 }
 ul.ul-card li .dy .year {
-	background-color: #9a9ef6;
+	background-color: #03cc85;
 }
 ul.ul-dates div.dates span {
-	background-color: #9a9ef6;
+	background-color: #03cc85;
 }
 ul.timeline li .date {
-	background: #9a9ef6;
+	background: #03cc85;
 }
 ul.timeline li .data {
-	border-left-color: #9a9ef6;
+	border-left-color: #03cc85;
 }
 .ul-withdetails li .imageoverlay {
-	background: #9a9ef6;
+	background: #03cc85;
 }
 .cd-active.cd-dropdown > span {
-	color: #9a9ef6;
+	color: #03cc85;
 }
 .cd-active.cd-dropdown ul li span:hover {
-	background: #9a9ef6;
+	background: #03cc85;
 }
 .pitems .pubmain .pubassets {
-	border-top-color:#9a9ef6; 
+	border-top-color:#03cc85; 
 }
 .pitems .pubmain .pubassets a:hover,.pitems .pubmain .pubassets a:focus,.pitems .pubmain .pubassets a.pubcollapse {
-	background: #9a9ef6;
+	background: #03cc85;
 }
 .contact-office .icon-huge, .contact-lab .icon-huge {
-	color: #9a9ef6;
+	color: #03cc85;
 }
 
 /* socpndary color 
 **************************************************/
 ul.ul-card li .dy .degree {
-	background-color: #7b80f3;
+	background-color: #03bb7a;
 }
 ul.ul-dates div.dates span:last-child {
-	background-color: #7b80f3;
+	background-color: #03bb7a;
 }
 ul.timeline li.open .circle {
-	background-color: #7b80f3;
+	background-color: #03bb7a;
 }
 ul.timeline li.open .data {
-	border-color: #7b80f3;
+	border-color: #03bb7a;
 }
 #labp-heads-wrap {
-	background-color: #7b80f3;
+	background-color: #03bb7a;
 }
 #labp-heads-wrap:after{
-	border-top-color: #7b80f3;
+	border-top-color: #03bb7a;
 }
 
 
