--- a/css/styles/blue.css
+++ b/css/styles/blue.css
@@ -1,61 +1,60 @@
 ul#navigation li.external:hover .icon, ul#navigation li.currentmenu .icon{
-	color: #9a9ef6;
+	color: #00beef;
 }
 .ul-boxed li {
-	border-left-color:#9a9ef6;
+	border-left-color:#00beef;
 }
 ul.ul-card li .dy .year {
-	background-color: #9a9ef6;
+	background-color: #00beef;
 }
 ul.ul-dates div.dates span {
-	background-color: #9a9ef6;
+	background-color: #00beef;
 }
 ul.timeline li .date {
-	background: #9a9ef6;
+	background: #00beef;
 }
 ul.timeline li .data {
-	border-left-color: #9a9ef6;
+	border-left-color: #00beef;
 }
 .ul-withdetails li .imageoverlay {
-	background: #9a9ef6;
+	background: #00beef;
 }
 .cd-active.cd-dropdown > span {
-	color: #9a9ef6;
+	color: #00beef;
 }
 .cd-active.cd-dropdown ul li span:hover {
-	background: #9a9ef6;
+	background: #00beef;
 }
 .pitems .pubmain .pubassets {
-	border-top-color:#9a9ef6; 
+	border-top-color:#00beef; 
 }
 .pitems .pubmain .pubassets a:hover,.pitems .pubmain .pubassets a:focus,.pitems .pubmain .pubassets a.pubcollapse {
-	background: #9a9ef6;
+	background: #00beef;
 }
 .contact-office .icon-huge, .contact-lab .icon-huge {
-	color: #9a9ef6;
+	color: #00beef;
 }
 
 /* socpndary color 
 **************************************************/
 ul.ul-card li .dy .degree {
-	background-color: #7b80f3;
+	background-color: #19468d;
 }
 ul.ul-dates div.dates span:last-child {
-	background-color: #7b80f3;
+	background-color: #19468d;
 }
 ul.timeline li.open .circle {
-	background-color: #7b80f3;
+	background-color: #19468d;
 }
 ul.timeline li.open .data {
-	border-color: #7b80f3;
+	border-color: #19468d;
 }
 #labp-heads-wrap {
-	background-color: #7b80f3;
+	background-color: #19468d;
 }
 #labp-heads-wrap:after{
-	border-top-color: #7b80f3;
+	border-top-color: #19468d;
 }
-
 
 
 
