--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
 }
 
 #profile .portrate {
-	background-image: url("../img/personal/personal-image.jpg");
+	background-image: url("../img/personal/me.jpeg");
 	width: 125px;
 	margin: 0 auto;
 	height: 125px;
