--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5745,9 +5745,9 @@ body.modal-open,
   position: absolute;
   z-index: 1030;
   display: block;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.4;
-  opacity: 0;
+  opacity: 1;
   filter: alpha(opacity=0);
   visibility: visible;
 }
@@ -5778,13 +5778,15 @@ body.modal-open,
 }
 
 .tooltip-inner {
-  max-width: 200px;
+  max-width: 150px;
+  max-width: 100%;
+
   padding: 3px 8px;
-  color: #ffffff;
-  text-align: center;
+  color: #000000;
+  text-align: justify;
   text-decoration: none;
-  background-color: #000000;
-  border-radius: 4px;
+  background-color: #ffffff;
+  border-radius: 5px;
 }
 
 .tooltip-arrow {
